@@ -1,4 +1,4 @@
-First-Run-Guide for Version 0.6.18
+First-Run-Guide for Version 0.6.19
 ----------------------------------
 
 NOTE!
