@@ -1,4 +1,4 @@
-Readme.Linux for xbmc addon swiss-army-knife 0.6.18 (Beta 3) 
+Readme.Linux for xbmc addon swiss-army-knife 0.6.19 (Beta 4) 
 ------------------------------------------------------------
 
 1.0 Welcome to my first addon called swiss-army-knife
