@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="script.video.swiss.army.knife"
        name="Swiss-Army-Knife" 
-       version="0.6.18" 
+       version="0.6.19" 
        provider-name="linuxluemmel.ch@gmail.com">
     <requires>
         <import addon="xbmc.python" version="1.0"/>
